--- a/reasources/css/b2.css
+++ b/reasources/css/b2.css
@@ -5,13 +5,15 @@ body {
     margin: 0;
     display: grid;
     font-family: 'Ubuntu', sans-serif;
-    background-color: white(240, 232, 232);
+    background-color: rgb(240, 232, 232);
     font-size: 35px;
 }
 .rectangle {
     height: 20px;
     width: 100%;
     background-color: purple;
+    padding-bottom: .2rem;
+    margin-bottom: .2rem;
 }
 
  
@@ -19,10 +21,25 @@ body {
     height: 100px;
     width: 400px;
 }
-.Art .artImage {
+/* .artImage {
     opacity: 87%;
-    height: 500px;
-    width: 700px;
-    border-radius: 100%;
+    height: -300px;
+    width: -700px;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
     
+} */
+
+#img{
+   border-radius: 10px 10px 10px 10px;
+   display: flex;
+   justify-content: center;
+   margin: 22px;
+   width: 450px;
+   height: 250px;
+   background-image: url(/Users/ryandevine/github/B2-s6c/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg);
+   display: flex;
+   justify-content: center;
 }
