--- a/reasources/css/b2.css
+++ b/reasources/css/b2.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     display: grid;
     font-family: 'Ubuntu', sans-serif;
-    background-color: rgb(240, 232, 232);
+    background-color: white;
     font-size: 35px;
 }
 .rectangle {
@@ -21,25 +21,14 @@ body {
     height: 100px;
     width: 400px;
 }
-/* .artImage {
-    opacity: 87%;
-    height: -300px;
-    width: -700px;
-    border-radius: 25px;
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-    
-} */
+
 
 #img{
-   border-radius: 10px 10px 10px 10px;
-   display: flex;
-   justify-content: center;
+   border-radius: 35px 35px 35px 35px;
    margin: 22px;
    width: 450px;
-   height: 250px;
-   background-image: url(/Users/ryandevine/github/B2-s6c/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg);
+   height: 210px;
    display: flex;
    justify-content: center;
+   
 }
