--- a/CreativeM/css/creativem.css
+++ b/CreativeM/css/creativem.css
@@ -1,9 +1,9 @@
+
 body{
 padding: 0;
 margin:0;
 display:grid;
 font-family: ubuntu;
-
 
 
 }
@@ -17,8 +17,42 @@ font-family: ubuntu;
 .box1{
     border-radius: 25px;
     background: #662483;
-    padding-left: 20px;
-
-    width: 200px;
+    position:relative;
+    top: 250px;
+    bottom: 0;
+    right:0;
+    left: 200px;
+    width: 150px;
     height: 150px;
+}
+
+.box2{
+    border-radius: 25px;
+    background-color: #662483;
+    position: relative;
+    top:350px;
+    bottom: 0;
+    right: 0;
+    left:0;
+    width: 150px;
+    height: 150px;
+}
+
+.footer{
+    align-items: center;
+    position: relative;
+    top: 450px;
+    background-color: cyan;
+    width: 100%;
+    height: 70px;
+
+    
+}
+.bt{
+    cursor: pointer;
+    position: absolute;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
 }
