--- a/public/reasources/css/b2.css
+++ b/public/reasources/css/b2.css
@@ -23,7 +23,7 @@ body {
 }
 
 
-#img{
+.subjects{
    border-radius: 35px 35px 35px 35px;
    margin: 22px;
    width: 450px;
@@ -33,7 +33,7 @@ body {
    object-fit:  fill;
    object-fit: cover;
 }
-#art{
+#Art{
     background-color: white;
     border: white;
 }
