--- a/public/css/b2.css
+++ b/public/css/b2.css
@@ -39,3 +39,6 @@ body {
     border: white;
 }
 
+.film{
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/final-b2.appspot.com/o/FilmStudies2.jpeg?alt=media&token=650b7937-30c5-4576-b045-ed7fc1a90211);
+}
